--- a/assets/style.css
+++ b/assets/style.css
@@ -248,7 +248,7 @@ section .title::after{
 }
 
 .about .about-content .right p{
-    text-align: justify;
+    text-align: center;
 }
 
 
@@ -366,7 +366,6 @@ section .title::after{
 }
 
 .contact .contact-content .right .map{
-    padding: 10px;
     display: block;
     margin: 1em auto;
     width: 100%;
@@ -559,7 +558,7 @@ footer span a:hover{
         background: #111;
         text-align: center;
         padding-top: 80px;
-        transition: all 0.9s ease;
+        transition: all 0.3s ease;
     }
     .navbar .menu.active{
         left: 0;
